# Connect-4

src/: CMakeLists.txt  game_of_lines.c  game_of_lines.h  play_game.c
test/: CMakeLists.txt  test_game_of_lines.c
